<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://tools.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".OldUserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_app_login"            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_recover_title"
            android:textColor="#D1D5DB"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_curved"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone_basic"
            android:textColor="@color/text_dark"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_4sdp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_Input_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/hint_phone_your"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/phone_ico"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btnProceed"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/btn_next_step"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            app:cornerRadius="12dp"/>



        <TextView
            android:id="@+id/tvCreateNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_acc"            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/red"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"/>


        <TextView
            android:id="@+id/Language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_data"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>
