<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://tools.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".NewUserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_acc_title"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_reg_instruction"            android:textColor="#D1D5DB"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_curved"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_your_name"
            android:textColor="@color/text_dark"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_Input_name"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:hint="@string/hint_select_customer"
            android:layout_margin="@dimen/_5sdp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/person_ico"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_mobile_lbl"
            android:textColor="@color/text_dark"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_Input_phone"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/hint_your_mobile"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/phone_ico"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btnRegisterSubmit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/btn_submit_reg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            app:cornerRadius="12dp"/>

    </LinearLayout>
</LinearLayout>