<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".Fab_Add_Customer_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        >

        <ImageButton
            android:id="@+id/back_buttin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:src="@drawable/arrow_back_ico"
            app:tint="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_new_customer"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_10sdp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/top_curved"
        android:orientation="vertical"
        >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_customer_name"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_40sdp"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/_10sdp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_Input_name"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:hint="@string/hint_customer_name"
        android:layout_gravity="center"
        app:errorEnabled="true"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_customer_phone"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/_10sdp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_Input_phone"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:hint="@string/hint_customer_phone"
        android:layout_gravity="center"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <!--=======================================-->



    <!--=======================================-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/solid_button_bg"
        android:text="@string/btn_save"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_11sdp" />



    </LinearLayout>
</LinearLayout>