<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_otp_code"
        android:textColor="@color/text_dark"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_otp_instruction"
        android:textSize="14sp"
        android:textColor="#666666"
        android:gravity="center"
        android:layout_marginBottom="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp">

        <EditText
            android:id="@+id/otpBox1"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otpBox2"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otpBox3"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otpBox4"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otpBox5"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otpBox6"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnVerifyLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/btn_login_submit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/_5sdp"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary_dark" />

</LinearLayout>